# tstr

./: .gitmodules  CMakeLists.txt  README.md  test1.txt  tsparse.c  tsparse.h  tstran.c
test/: tests.c
tsparse/: tsparse.c  tsparse.h
